<resources>
    <string name="app_name">Breakout</string>
    <string name="loading_splash_screen_text">Loading…</string>
    <string name="btn_new_game_text">New Game</string>
    <string name="btn_show_leaderboard_text">Leader Board</string>
    <string name="start_game_text">Good Luck!</string>
    <string name="resume_game_text">Resume Game</string>
    <string name="score_text_message">You Scored %1$d!</string>
    <string name="high_score_text">Congrats! You got a new High Score!</string>
    <string name="high_score_add_text">Enter your name:</string>
    <string name="add_to_leaderboard_text">Get on the Leader Board!</string>
</resources>
